Kubernetes-Manifest-Files/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: devops-tools
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/path:   /
      prometheus.io/port:   '8080'
spec:
  selector:
    app: jenkins-server

  ports:
    - port: 8080
      targetPort: 8080
